# python-template

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: memo.md
src/: common.py  config.py  main.py  utils.py
src/tools/: system_info.py
