[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
]
